--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		 <dependency>
+            		<groupId>org.springframework.boot</groupId>
+            		<artifactId>spring-boot-starter-actuator</artifactId>
+        	</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 <!--		<dependency>-->
 <!--			<groupId>org.postgresql</groupId>-->
